- Updated database, schema and javascript so that "PostedAt" is now set by the database as SYSUTCDATETIME() as per standards - Fixed permission issues around Attachments and Sharing - Quality of life improvements to LEADTOOLS New files added - [FormDraftServiceImpl.java,FormDraftService.java,FormDraftDao.java,FormDraft.java,FormDraftController.java] Files modified - [cx2_published_dataModel.json,ProjectsService.java,NewForm.html,index.html,ProjectsServiceImpl.java,Cx2QueryExecutorService_V1.java,MunicipalitiesController.java,Forms.html,Projects.java,Cx2QueryExecutorServiceImpl.java,FormTypesService.java,UsersController.java,GisrecordsServiceImpl.java,InsertFormMessageRequest.java,cx2_query.json,app.js,Municipalities.java,MunicipalitiesServiceImpl.java,index.mobile.html,GisrecordsService.java,FormMessages.java,cx2-queries.hbm.xml,FormTypesServiceImpl.java,Main.Annotations.js,States.java,Forms.js,FormTypesController.java,FormTypes.java,StatesServiceImpl.java,UsersService.java,Users.java,Forms.variables.json,StatesController.java,pom.xml,GisrecordsController.java,DocumentConverterDlg.js,StatesService.java,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,Cx2QueryExecutorServiceImpl_V1.java,db-connection-settings.json]

--- a/src/main/webapp/resources/leadTools/index.mobile.html
+++ b/src/main/webapp/resources/leadTools/index.mobile.html
@@ -630,8 +630,8 @@
                                 <p>Format:</p>
                                 <!-- Document or raster conversion  -->
                                 <select id="mainConverterFormats" class="form-control">
-                                    <option selected="selected" value="document">Document</option>
-                                    <option value="raster">Raster</option>
+                                    <option value="document">Document</option>
+                                    <option selected="selected" value="raster">Raster</option>
                                 </select>
                                 <br />
                                 <div id="documentFormatsControls" class="input-group">
@@ -649,7 +649,7 @@
                                     <select id="annotationsMode" class="form-control">
                                         <option value="0">Do not export any annotations</option>
                                         <!--option value="1">Export to an external file</option-->
-                                        <option value="2">Overlay (works with Raster formats only)</option>
+                                        <option selected="selected" value="2">Overlay (works with Raster formats only)</option>
                                         <option value="3">Embed into the output document (works with PDF and TIF files only)</option>
                                     </select>
                                 </div>
