- Fixing some boolean issues in Inspections Files modified - [pages-config.json,cx2_published_dataModel.json,FormMessages.java,FormController.java,NewForm.js,newFormDialog.html,NewForm.html,MasterInspections.java,NewForm.variables.json,newFormDialog.js,FormService.java,Forms.variables.json,newFormDialog.variables.json,InspectionDesign.java]

--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -32,7 +32,7 @@
         </wm-gridrow>
     </wm-layoutgrid>
     <wm-dialogactions name="dialogactions1">
-        <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="Variables.navToNewForm.invoke();closeDlg()" show="true" iconclass="wi wi-plus" disabled="bind:!Widgets.selectForm.datavalue"></wm-button>
+        <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope);closeDlg()" show="true" iconclass="wi wi-plus" disabled="bind:!Widgets.selectForm.datavalue"></wm-button>
         <wm-button class="btn-secondary" caption="Cancel" on-click="button1Click($event, $scope)" name="button1" iconclass="wi wi-cancel"></wm-button>
     </wm-dialogactions>
 </wm-partial>
