Updated help text for form status settings. Updated Request Inspection dialog and toaster text Files modified - [EditForm.html,pom.xml,Forms.html,Forms.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -463,7 +463,7 @@
                                                                     <wm-gridrow name="gridrow23_1" padding="unset unset 1em unset">
                                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn45_1" padding="unset 1em unset unset">
                                                                             <wm-form-field name="allowInspections" displayname="Allow Inspection Requests" show="true" primary-key="false" generator="assigned" key="allowInspections" type="boolean" widget="checkbox"
-                                                                            placeholder="" defaultvalue="false" hint="If this form requires inspections, this option allows inspections to be requested while the form is in this status."></wm-form-field>
+                                                                            placeholder="" defaultvalue="false" hint="This allows inspections to be requested by the end user while the form is in this status. Municipality employees can always request an inspection."></wm-form-field>
                                                                         </wm-gridcolumn>
                                                                     </wm-gridrow>
                                                                 </wm-panel>
